<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_margin="@dimen/_16sdp"
    android:layout_height="match_parent">

<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".app.login.LoginFragment"

    tools:layout_editor_absoluteX="@dimen/_16sdp"
    tools:layout_editor_absoluteY="@dimen/_97sdp">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/signup_Email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_25sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_layout_Name">

        <EditText
            android:id="@+id/et_signup_Email"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:layout_height="wrap_content"
            android:maxLength="40"
            android:hint="@string/email"
            android:textColor="@color/colorBlack" />


    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_register_Password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_25sdp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_layout_mobileno">

        <EditText
            android:id="@+id/et_signup_Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:maxLength="20"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:textColor="@color/colorBlack" />


    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_Name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/et_signup_Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:maxLength="40"
            android:hint="@string/username"
            android:textColor="@color/colorBlack" />


    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_CPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_25sdp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_layout_register_Password">

        <EditText
            android:id="@+id/et_signup_CPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="20"
            android:singleLine="true"
            android:inputType="textPassword"
            android:hint="@string/confirm_password"
            android:textColor="@color/colorBlack" />


    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_mobileno"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_25sdp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_Email">

        <EditText
            android:id="@+id/et_signup_mobileno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:singleLine="true"
            android:maxLength="10"
            android:hint="@string/mobile_number"
            android:textColor="@color/colorBlack" />


    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_16sdp"
        android:background="@drawable/btn_rounded"
        android:text="@string/button_signup"
        android:textAllCaps="false"
        android:textColor="@color/colorwhite"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_marginTop="42dp"
        android:text="@string/already_have_an_account"
        app:layout_constraintBottom_toTopOf="@+id/tv_signup_Login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_layout_CPassword"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tv_signup_Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_25sdp"
        android:text="@string/login_now"
        android:textAllCaps="true"
        android:textColor="@color/colorComponents"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

</android.support.constraint.ConstraintLayout>
</ScrollView>