<?xml version="1.0" encoding="utf-8"?>
<LinearLayout app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
    android:id="@+id/fragment_history_menu_bottom"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_180sdp"
    android:orientation="vertical"
    android:background="#ffffff"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:id="@+id/share_on_fb"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_60sdp"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal"
        android:foreground="?android:attr/selectableItemBackground"
        android:padding="@dimen/_16sdp">
        <ImageView
            android:layout_width="@dimen/_30sdp"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/facebook"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/_16sdp"
            android:text="@string/share_on_facebook"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/share_on_google"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_60sdp"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal"
        android:foreground="?android:attr/selectableItemBackground"
        android:padding="@dimen/_16sdp">

        <ImageView
            android:layout_width="@dimen/_28sdp"
            android:layout_height="@dimen/_28sdp"
            app:srcCompat="@drawable/googleplus" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/_16sdp"
            android:text="@string/share_on_google_plus"/>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/share_to_other"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_60sdp"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal"
        android:foreground="?android:attr/selectableItemBackground"
        android:padding="@dimen/_16sdp">
        <ImageView
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            app:srcCompat="@drawable/ic_share_red_700_24dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/_16sdp"
            android:text="@string/share_to_other"/>

    </LinearLayout>
</LinearLayout>