<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingBottom="@dimen/_16sdp"
    android:paddingLeft="@dimen/_16sdp"
    android:paddingRight="@dimen/_16sdp"
    android:paddingTop="@dimen/_16sdp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/weather_image"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginBottom="76dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/nav_header_desc"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <TextView
        android:id="@+id/tv_header_UserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7dp"
        android:layout_marginTop="72dp"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/nav_header_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_header_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_header_WeatherType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_80sdp"
        android:layout_marginEnd="@dimen/_32sdp"
        android:layout_marginRight="@dimen/_32sdp"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_header_temperature"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/nav_header_title" />

    <TextView
        android:id="@+id/tv_header_temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_80sdp"

        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginLeft="@dimen/_88sdp"
        android:layout_marginRight="@dimen/_8sdp"
        android:layout_marginStart="@dimen/_88sdp"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_header_WeatherType"
        app:layout_constraintStart_toEndOf="@+id/weather_image"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.507"
        tools:text="60F" />

    <TextView
        android:id="@+id/tv_header_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/nav_header_subtitle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_header_UserName"
        app:layout_constraintTop_toBottomOf="@+id/tv_header_UserName" />


</android.support.constraint.ConstraintLayout>
