<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"

    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".app.restaurantsActivity.RestaurantActivity"
    tools:layout_editor_absoluteY="@dimen/_81sdp"
    tools:showIn="@layout/app_bar_restaurant">


    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">


        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
            app:scrimAnimationDuration="0">

            <android.support.constraint.ConstraintLayout
                android:id="@+id/child_constraint_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v4.view.ViewPager
                    android:id="@+id/viewPager"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_168sdp"
                    app:layout_collapseMode="parallax"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:background="@color/colorPrimaryDark" />


                <LinearLayout
                    android:id="@+id/SliderDots"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/viewPager"
                    android:layout_marginBottom="@dimen/_22sdp"
                    android:gravity="center_vertical|center_horizontal"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="@+id/viewPager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <Button
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:id="@+id/search_btn"
                    android:layout_marginBottom="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_32sdp"
                    android:layout_marginRight="@dimen/_32sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:background="@drawable/btn_rounded"
                    android:drawableTop="@drawable/ic_search_white_24dp"
                    android:gravity="center|center_vertical"
                    android:paddingTop="@dimen/_10sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/viewPager"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_29sdp"
                    android:layout_marginStart="@dimen/_29sdp"
                    android:text="@string/sa"
                    android:textColor="@color/colorwhite"
                    app:layout_collapseMode="pin"
                    android:textSize="@dimen/_17ssp"
                    android:textStyle="italic|bold"
                    android:translationZ="@dimen/_5sdp"
                    app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_8sdp"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:text="@string/restaurant"
                    app:layout_collapseMode="pin"
                    android:textColor="@color/colorComponents"
                    android:textSize="@dimen/_17ssp"                    android:textStyle="italic|bold"
                    android:translationZ="@dimen/_5sdp"
                    app:layout_constraintStart_toEndOf="@+id/textView2"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:text="@string/hey"
                    android:textColor="@color/colorwhite"
                    android:textSize="@dimen/_15ssp"
                    android:textStyle="bold|italic"
                    android:translationZ="@dimen/_5sdp"
                    app:layout_constraintStart_toStartOf="@+id/textView2"
                    app:layout_constraintTop_toBottomOf="@+id/textView2" />

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:ellipsize="end"
                    android:maxLength="20"
                    android:scrollbars="vertical"
                    android:singleLine="true"
                    android:text="@string/jay"
                    android:textColor="@color/colorwhite"
                    android:textSize="@dimen/_15ssp"
                    android:textStyle="bold|italic"
                    android:translationZ="@dimen/_5sdp"
                    app:layout_constraintStart_toEndOf="@+id/textView4"
                    app:layout_constraintTop_toTopOf="@+id/textView4" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:text="@string/which_restaurant"
                    android:textColor="@color/colorwhite"
                    android:textSize="@dimen/_15ssp"
                    android:textStyle="bold|italic"
                    android:translationZ="@dimen/_5sdp"
                    app:layout_constraintStart_toStartOf="@+id/textView4"
                    app:layout_constraintTop_toBottomOf="@+id/name" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:text="@string/you_are_looking_for_today"
                    android:textColor="@color/colorwhite"
                    android:textSize="@dimen/_15ssp"
                    android:textStyle="bold|italic"
                    android:translationZ="@dimen/_5sdp"
                    app:layout_constraintStart_toStartOf="@+id/textView5"
                    app:layout_constraintTop_toBottomOf="@+id/textView5" />
            </android.support.constraint.ConstraintLayout>
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh"
        android:layout_width="match_parent"
        android:layout_height="565dp"

        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintBottom_toTopOf="@+id/toolbar2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/collapsing_toolbar">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

        </android.support.v7.widget.RecyclerView>

    </android.support.v4.widget.SwipeRefreshLayout>



</android.support.design.widget.CoordinatorLayout>
